--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -519,6 +519,15 @@ em {
 .blueteamradio {
   color: #3434fd;
 }
+
+.greenteamradio {
+  color: #34fd34;
+}
+
+.yellowteamradio {
+  color: #fdfd34;
+}
+
 .holocall {
   color: #c5285c;
 }
