--- a/tgui/packages/tgui/styles/interfaces/IntegratedCircuit.scss
+++ b/tgui/packages/tgui/styles/interfaces/IntegratedCircuit.scss
@@ -1,7 +1,7 @@
 @use '../colors.scss';
 @use '../base.scss';
 
-$bg-map: colors.$bg-map !default;
+$fg-map: colors.$fg-map !default;
 
 .CircuitInfo__Examined {
   background-color: rgba(0, 0, 0, 1);
@@ -30,6 +30,12 @@ $bg-map: colors.$bg-map !default;
   user-select: none;
 }
 
+.ObjectComponent__Port {
+  position: relative;
+  width: 13px;
+  height: 13px;
+}
+
 .ObjectComponent__PortPos {
   position: absolute;
   top: 0;
@@ -38,9 +44,13 @@ $bg-map: colors.$bg-map !default;
   bottom: 0;
 }
 
-@each $color-name, $color-value in $bg-map {
+@each $color-name, $color-value in $fg-map {
   .color-stroke-#{$color-name} {
     stroke: $color-value !important;
+  }
+
+  .color-fill-#{$color-name} {
+    fill: $color-value !important;
   }
 }
 
